Bug 1934040 - Remove WS_SYSMENU when using custom titlebar, so that DWM doesn't draw caption buttons. r=win-reviewers,rkraesig

Unhide our buttons instead, which fixes the caption button sizes when
Mica is enabled.

Crucially (and this is what I had failed to do in my original attempts),
we need to keep WS_MAXIMIZEBOX for Snap Layouts and Aero snap to keep
working. WS_MINIMIZEBOX doesn't hurt either.

This is a bit scary, because we're in undocumented territory, but afaict
(looking with winspy), MS Edge does the same for its custom titlebar, so
I think this is probably safe. It's early in the cycle anyways...

Make the pre-xul skeleton UI flags more consistent while at it.
WS_OVERLAPPED is zero, and WS_SIZEBOX is the same as WS_THICKFRAME (so
there's no change other than removing WS_SYSMENU), but that way it
matches nsWindow::WindowStyle more directly.

In order to not fully lose the system menu functionality, reuse the
functionality we already have to show it on fullscreen windows (which
already lack these styles). Note that this also fixes a bug on which, if
you have a fullscreen window in a non-primary monitor, the system menu
shows up in the primary monitor instead of in your window.

Differential Revision: https://phabricator.services.mozilla.com/D230722